--- a/vbarkovskij.com/less/sections/about.less
+++ b/vbarkovskij.com/less/sections/about.less
@@ -1,8 +1,8 @@
 .about-section {
 
     @media (max-width: 1300px) {
-        background: url('../img/about/background.jpg') no-repeat center center fixed;
-        background-size: cover;
+        background: url('../img/about/background.jpg') no-repeat center center;
+        background-size: 100vmax;
     }
 
     @media @desktop-wide {
